Bug 29108 - persistent intermittent bufhdr-corruption / transport-failures, even with large -s
Summary: persistent intermittent bufhdr-corruption / transport-failures, even with lar...
Status: RESOLVED FIXED
Alias: None
Product: systemtap
Classification: Unclassified
Component: runtime (show other bugs)
Version: unspecified
: P2 normal
Target Milestone: ---
Assignee: Frank Ch. Eigler
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-05-01 14:39 UTC by Frank Ch. Eigler
Modified: 2023-08-12 19:01 UTC (History)
0 users

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Frank Ch. Eigler 2022-05-01 14:39:31 UTC
# stap -b -s400 -e 'probe syscall.* { println(name, argstr) }' -c 'sleep 30'

Even with 400MB of buffers per cpu, we can get a handful of transport failures.  This phenomenon appears to be affecting the syscalls* testsuite.
Comment 1 Frank Ch. Eigler 2022-05-02 13:11:01 UTC
commit 5ca9730070e4
commit f0bc3bba32

improve this situation somewhat, especially for -b bulk mode
Comment 2 Frank Ch. Eigler 2023-08-12 19:01:48 UTC
commit 5b39471380a238469c8fc18136f12600e5e9aec7
gpg: Signature made Sat 12 Aug 2023 02:49:21 PM EDT
gpg:                using RSA key 5D38116FA4D3A7CC77E378D37E83610126DCC2E8
gpg: Good signature from "Frank Ch. Eigler <fche@elastic.org>" [ultimate]
Author: Frank Ch. Eigler <fche@redhat.com>
Date:   Mon Jul 31 14:06:57 2023 -0400

    PR29108 / BZ2095359: rewrite staprun serializer logic