PR29108 in-progress: tweak transport settings

- reduce STP_RELAY_TIMER_INTERVAL to apprx. 1ms, so that userspace is informed
  within about 1ms of a buffer being given content
- suppress the "bufhdr corrupt" warning from staprun, instead make the
  runtime's "There were N transport failures" message a little more quantitative

With the previous change re. bulk mode, at least the occurrence of
transport failures falls off with these changes, especially for -b
bulk mode.  More work is ongoing.