staprun/relay.c
@@ -211,7 +211,7 @@ static void *reader_thread(void *data)
                    not a proper _stp_trace struct but the interior of some piece of 
                    trace text message.  XXX: validate bufhdr.sequence a little bit too? */
                 if (bufhdr.pdu_len == 0 || bufhdr.pdu_len > sizeof(buf)) {
-                        _perr("bufhdr corrupt, attempting resync");
+                        /* _perr("bufhdr corrupt, attempting resync"); */ 
                         rc = read(relay_fd[cpu], buf, sizeof(buf)); /* drain the buffers */
                         (void) rc;
                         continue; /* may resync at next subbuf boundary so don't give up */
